src/query_parser/query_tokenizer.c
/* Generated by re2c 0.9.10 on Tue Sep 14 11:51:11 2010 */
#line 1 "query_tokenizer.re"
#include "lucene.h"
#include "lcn_search.h"
#include "query_parser.h"
#include "query_tokenizer.h"


static void
init_token ( lcn_query_token_t *token,
             int token_id,
             char* start,
             char* end,
             apr_pool_t *pool )
{
    token->token_id = token_id;
    token->text = apr_pstrndup( pool, start, end-start );
}


static int
lcn_next_token_impl ( lcn_query_tokenizer_t *query_tokenizer,
                      lcn_query_token_t *token )
{
    char *q;
    char *token_start = (char*) query_tokenizer->text;
    token->token_id = -1;

    if ( token_start == query_tokenizer->eofbuf )
    {
        return LCN_ERR_ITERATOR_NO_NEXT;
    }

#define YYCTYPE         unsigned char
#define YYCURSOR        query_tokenizer->text
#define YYLIMIT         query_tokenizer->eofbuf
#define YYMARKER        q
#define YYCTXMARKER     ctx
#define YYFILL(n)


#define INIT_TOKEN(X) { init_token( token, X, token_start, query_tokenizer->text, query_tokenizer->pool );return APR_SUCCESS; }


#line 47 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy0;
	++YYCURSOR;
yy0:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch(yych){
	case ' ':	goto yy9;
	case '"':	goto yy15;
	case '(':	goto yy17;
	case ')':	goto yy19;
	case '*':	goto yy13;
	case '+':	case '-':	goto yy11;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy2;
	case ':':	goto yy6;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':	case 0xC4:	case 0xD6:	case 0xDC:	case 0xDF:	case 0xE4:	case 0xF6:	case 0xFC:	goto yy8;
	case '_':	goto yy4;
	default:	goto yy21;
	}
yy2:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy32;
yy3:
#line 53 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_TERM_TEXT );   }
#line 134 "<stdout>"
yy4:	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch(yych){
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':	case '_':	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy29;
	default:	goto yy5;
	}
yy5:
#line 60 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_EOS );         }
#line 179 "<stdout>"
yy6:	++YYCURSOR;
	goto yy7;
yy7:
#line 52 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_SEP);          }
#line 185 "<stdout>"
yy8:	yych = *++YYCURSOR;
	goto yy25;
yy9:	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy23;
yy10:
#line 54 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_SPACE );       }
#line 194 "<stdout>"
yy11:	++YYCURSOR;
	goto yy12;
yy12:
#line 55 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_CLAUSE );      }
#line 200 "<stdout>"
yy13:	++YYCURSOR;
	goto yy14;
yy14:
#line 56 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_ASTERISK );    }
#line 206 "<stdout>"
yy15:	++YYCURSOR;
	goto yy16;
yy16:
#line 57 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_QUOT_MARK );   }
#line 212 "<stdout>"
yy17:	++YYCURSOR;
	goto yy18;
yy18:
#line 58 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_OPEN_BR );     }
#line 218 "<stdout>"
yy19:	++YYCURSOR;
	goto yy20;
yy20:
#line 59 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_CLOSE_BR );    }
#line 224 "<stdout>"
yy21:	yych = *++YYCURSOR;
	goto yy5;
yy22:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy23;
yy23:	switch(yych){
	case ' ':	goto yy22;
	default:	goto yy10;
	}
yy24:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy25;
yy25:	switch(yych){
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	case 0xC4:	case 0xD6:	case 0xDC:	case 0xDF:	case 0xE4:	case 0xF6:	case 0xFC:	goto yy24;
	default:	goto yy3;
	}
yy26:	++YYCURSOR;
	goto yy27;
yy27:	YYCURSOR -= 1;
#line 51 "query_tokenizer.re"
{ INIT_TOKEN( LCNQ_FIELD_PREFIX );}
#line 307 "<stdout>"
yy28:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy29;
yy29:	switch(yych){
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	case '_':	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy28;
	case ':':	goto yy26;
	default:	goto yy30;
	}
yy30:	YYCURSOR = YYMARKER;
	switch(yyaccept){
	case 0:	goto yy3;
	case 1:	goto yy5;
	}
yy31:	yyaccept = 0;
	YYMARKER = ++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy32;
yy32:	switch(yych){
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy31;
	case ':':	goto yy26;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':	case 0xC4:	case 0xD6:	case 0xDC:	case 0xDF:	case 0xE4:	case 0xF6:	case 0xFC:	goto yy24;
	case '_':	goto yy28;
	default:	goto yy3;
	}
}
#line 63 "query_tokenizer.re"


    return LCN_ERR_ITERATOR_NO_NEXT;
}



apr_status_t
lcn_query_tokenizer_next_token ( lcn_query_tokenizer_t *tokenizer,
                                 int *token_id,
                                 lcn_query_token_t *token )
{
    apr_status_t s = lcn_next_token_impl( tokenizer, token );
    *token_id = token->token_id;
    return s;
}


apr_status_t
lcn_query_tokenizer_create( lcn_query_tokenizer_t **tokenizer,
                            const char *text,
                            apr_pool_t *pool )
{
    apr_status_t s;

    do
    {
        LCNPV( *tokenizer = (lcn_query_tokenizer_t*) apr_pcalloc( pool, sizeof(lcn_query_tokenizer_t)),
               APR_ENOMEM );

        LCNPV( (*tokenizer)->text = apr_pstrdup( pool, text ),
               APR_ENOMEM );

        (*tokenizer)->pool = pool;
        (*tokenizer)->eofbuf = (*tokenizer)->text + strlen(text);

    }
    while(0);

    return s;
}

